Bug fix: Fixed layout issues for chatroom

--- a/Frontend/src/components/chats/style.module.css
+++ b/Frontend/src/components/chats/style.module.css
@@ -2,10 +2,10 @@
      width: calc(100% - 56px);
      margin-left: auto;
      position: relative;
+     top: 80px;
      z-index: 0;
      right: 0;
-     height: 100%;
-     margin-top: 3rem;
+     /* height: 100%; */
 }
 
 ._main_resize {
@@ -71,14 +71,44 @@ input[placeholder|="Search name, messages"],
      cursor: pointer;
  }
 
+ ._chat_header_resize {
+     position: fixed;
+          right: 16px;
+          left: 430px;
+          z-index: 20;
+ }
+
  /* Responsiveness */
 
 @media screen and (min-width: 768px) {
+     ._friends_list {
+     border-right: 1px solid #A5AEBC !important;
+     height: 100vh;
+     position: fixed;
+     overflow-y: scroll;
+     top: 80px;
+     bottom: 0;
+}
      ._chat_rooms {
-          width: 320px;
+          width: 280px;
      }
 
      ._room {
-          width: calc(100% - 320px);
+          width: calc(100% - 280px);
+          margin-left: auto;
+          height: 100vh;
      }
+
+     ._chat_header {
+          position: fixed;
+          right: 16px;
+          left: 350px;
+          z-index: 20;
+     }
+
+     ._chats_div {
+          top: 140px;
+     }
+
+
 }
